[tool.poetry]
name = "trio-binance"
version = "0.1.0"
description = ""
authors = ["Shu Wang <halfelf.ronin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
h2 = "^4.1.0"
trio = "^0.19.0"
trio-websocket = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
