[tool.poetry]
name = "trio-binance"
version = "0.1.4"
description = "trio based asynchronous binance SDK"
authors = ["Shu Wang <halfelf.ronin@gmail.com>"]
keywords = ["binance", "python-trio"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/halfelf/trio-binance"
repository = "https://github.com/halfelf/trio-binance"
include = [
    "LICENSE",
]
classifiers = [
    "Framework :: Trio",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
h2 = "^4.1.0"
trio = "^0.20.0"
trio-websocket = "^0.9.2"
ujson = "^5.1.0"
pytz = "^2021.3"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.26.0"
pytest-trio = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
